--- a/package.json
+++ b/package.json
@@ -59,5 +59,16 @@
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
     "yorkie": "^2.0.0"
-  }
+  },
+  "name": "dks_front",
+  "description": "`npm run build -- --bv={version} --basePath={path}`",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "http://172.16.10.118:17990/scm/web/dks_front.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
