鉴权服务加入福田E家和TSP的拦截

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,18 +1,17 @@
 spring:
   application:
-    name: @project.artifactId@
+    name: dkserver-back
   profiles:
-    active: test
-    include: base
+    active: dev
   cloud:
     nacos:
       discovery:
-        ip: 172.16.6.107
+        server-addr: 172.16.13.13:8848 # 注册中心地址
+        ip: 172.16.10.69
+        namespace: dev1
       config:
-        shared-configs:
-          - data-id: logging.yaml
-            refresh: true
-            group: common
-mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
+        server-addr: 172.16.13.13:8848  # config地址
+        enabled: true # 是否开启
+        refresh-enabled: true # 是否开启自动刷新
+        file-extension: yaml # 指定配置文件类型
+        namespace: dev1
