--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,17 +3,19 @@ spring:
     name: @project.artifactId@
   profiles:
     active: test
-    include: base
   cloud:
     nacos:
 #      discovery:
 #        ip: 172.16.10.104
       config:
-        group: liujz
+        server-addr: 172.16.13.13:8848  #  配置中心地址
+        file-extension: yaml # 指定配置文件类型
+        namespace: ${spring.profiles.active}
         shared-configs:
-          - data-id: logging.yaml
+          - data-id: common.yaml
             refresh: true
             group: common
+        group: liujz
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
