--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -5,15 +5,18 @@ spring:
     active: test
   cloud:
     nacos:
+      discovery:
+        server-addr: 172.16.13.13:8848 # 注册中心地址
+        ip: 172.16.38.213
+        namespace: ${spring.profiles.active}
       config:
-        server-addr: 172.16.13.13:8848  #  配置中心地址
+        server-addr: 172.16.13.13:8848  # config地址
+        enabled: true # 是否开启
+        refresh-enabled: true # 是否开启自动刷新
         file-extension: yaml # 指定配置文件类型
         namespace: ${spring.profiles.active}
+        group: liujz
         shared-configs:
           - data-id: common.yaml
             refresh: true
             group: common
-        group: liujz
-mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
