--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -5,6 +5,8 @@ spring:
     active: test
   cloud:
     nacos:
+#      discovery:
+#        ip: 172.16.13.12
       config:
         server-addr: 172.16.13.13:8848  #  配置中心地址
         file-extension: yaml # 指定配置文件类型
@@ -13,7 +15,6 @@ spring:
           - data-id: common.yaml
             refresh: true
             group: common
-        group: liujz
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
