refactor: 历史导出记录按页面分类型查看
1.历史导出记录区分钥匙记录与钥匙信息

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,16 +2,21 @@ spring:
   application:
     name: dkserver-back
   profiles:
-    active: dev
+    active: test
   cloud:
     nacos:
       discovery:
         server-addr: 172.16.13.13:8848 # 注册中心地址
-        ip: 172.16.10.69
-        namespace: dev1
+        ip: 172.16.38.213
+        namespace: ${spring.profiles.active}
       config:
         server-addr: 172.16.13.13:8848  # config地址
         enabled: true # 是否开启
         refresh-enabled: true # 是否开启自动刷新
         file-extension: yaml # 指定配置文件类型
-        namespace: dev1
+        namespace: ${spring.profiles.active}
+        group: liujz
+        shared-configs:
+          - data-id: common.yaml
+            refresh: true
+            group: common
