--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,20 +2,20 @@ spring:
   application:
     name: @project.artifactId@
   profiles:
-    active: test
+    active: foton
   cloud:
     nacos:
       discovery:
         server-addr: 172.16.13.13:8848 # 注册中心地址
         #        本地测试
-        ip: 172.16.38.213
+#        ip: 172.16.38.213
         #        线上测试
-#        ip: 172.16.6.106
+        ip: 172.16.6.106
         namespace: ${spring.profiles.active}
       config:
         server-addr: 172.16.13.13:8848  #  配置中心地址
         file-extension: yaml # 指定配置文件类型
-        group: liujz
+#        group: liujz
         namespace: ${spring.profiles.active}
         shared-configs:
           - data-id: common.yaml
