--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,27 +2,14 @@ spring:
   application:
     name: @project.artifactId@
   profiles:
-#    active: foton
-    active: test
+    active: foton
   cloud:
     nacos:
       discovery:
-        server-addr: 172.16.13.13:8848 # 注册中心地址
-#        server-addr: 10.108.33.137:8888 # 北京注册中心地址
-        #        本地测试
-#        ip: 172.16.38.213
-        #        本地测试
-        ip: 172.16.13.13
-        #        线上测试
-#        ip: 172.16.6.106
-        #        北京
-#        ip: 10.108.33.50
-        namespace: ${spring.profiles.active}
+        ip: 10.108.33.50
       config:
-        server-addr: 172.16.13.13:8848  #  配置中心地址
-#        server-addr: 10.108.33.137:8888 # 北京注册中心地址
-        file-extension: yaml # 指定配置文件类型
-        group: liujz
+        server-addr: 10.108.33.137:8888
+        file-extension: yaml
         namespace: ${spring.profiles.active}
         shared-configs:
           - data-id: common.yaml
