--- a/pom.xml
+++ b/pom.xml
@@ -214,13 +214,15 @@
 
                     <!-- 切换到容器工作目录-->
                     <workdir>/</workdir>
-                    <cmd>["java", "-Dfile.encoding=UTF-8","-Duser.timezone=GMT+8", "-jar", "${project.build.finalName}.jar"]</cmd>
-<!--                    <entryPoint>["java","-jar","${project.build.finalName}.jar"]</entryPoint>-->
+                    <cmd>["java", "-Dfile.encoding=UTF-8","-Duser.timezone=GMT+8", "-jar",
+                        "${project.build.finalName}.jar"]
+                    </cmd>
+                    <!--                    <entryPoint>["java","-jar","${project.build.finalName}.jar"]</entryPoint>-->
 
-<!--                    &lt;!&ndash; 指定远程 Docker API地址  &ndash;&gt;-->
-<!--                    <dockerHost>https://172.16.13.13:2376</dockerHost>-->
-<!--                    &lt;!&ndash; 指定tls证书的目录 &ndash;&gt;-->
-<!--                    <dockerCertPath>D:\docker-ca\为辰-13-13</dockerCertPath>-->
+                    <!--                    &lt;!&ndash; 指定远程 Docker API地址  &ndash;&gt;-->
+                    <!--                    <dockerHost>https://172.16.13.13:2376</dockerHost>-->
+                    <!--                    &lt;!&ndash; 指定tls证书的目录 &ndash;&gt;-->
+                    <!--                    <dockerCertPath>D:\docker-ca\为辰-13-13</dockerCertPath>-->
 
                     <!-- 指定远程 Docker API地址  -->
                     <dockerHost>https://172.16.6.106:2376</dockerHost>
