--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        ip: 172.16.6.106
+        ip: 172.16.38.213
         namespace: ${spring.profiles.active}
       config:
         server-addr: 172.16.13.13:8848  #  配置中心地址
@@ -17,3 +17,6 @@ spring:
           - data-id: common.yaml
             refresh: true
             group: common
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
