--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     ]
   },
   "dependencies": {
-    "@ant-design/icons": "^4.6.3",
+    "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-layout": "^6.5.0",
     "antd-pro-merge-less": "^3.0.11",
     "antd-pro-theme-webpack-plugin": "^1.1.8",
@@ -57,6 +57,7 @@
     "lint-staged": "^10.0.7",
     "mockjs": "^1.1.0",
     "prettier": "^2.2.0",
+    "svg-sprite-loader": "^6.0.11",
     "typescript": "^4.1.2",
     "yorkie": "^2.0.0"
   },
