--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: dkserver-back
   profiles:
-    active: dev
+    active: test
   cloud:
     nacos:
       config:
