搭建测试环境，修改 yaml

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: dkserver-back
   profiles:
-    active: saic
+    active: saic-test
   cloud:
     nacos:
       config:
