--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: dkserver-back
   profiles:
-    active: saic
+    active: saic-test
   cloud:
     nacos:
       config:
@@ -13,4 +13,3 @@ spring:
           - data-id: common.yaml
             refresh: true
             group: common
-
