--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: dkserver-back
   profiles:
-    active: saic
+    active: dev
   cloud:
     nacos:
       config:
@@ -11,7 +11,16 @@ spring:
         server-addr: 172.16.13.13:8888  #  配置中心地址
         file-extension: yaml # 指定配置文件类型
         namespace: ${spring.profiles.active}
+        group: liujz
         shared-configs:
           - data-id: common.yaml
             refresh: true
             group: common
+mybatis-plus:
+  mapper-locations: mapper/*Mapper.xml
+  configuration:
+    map-underscore-to-camel-case: true
+    #默认不显示SQL日志
+    #    log-impl: org.apache.ibatis.logging.nologging.NoLoggingImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    local-cache-scope: statement
