feature:  日志管理 -> 诊断日志记录
1.人车绑定接口重复绑定状态码改为200。

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: dkserver-back
   profiles:
-    active: dev
+    active: saic-test
   cloud:
     nacos:
       config:
@@ -11,8 +11,13 @@ spring:
         server-addr: 172.16.13.13:8888  #  配置中心地址
         file-extension: yaml # 指定配置文件类型
         namespace: ${spring.profiles.active}
-        group: liujz
         shared-configs:
           - data-id: common.yaml
+            refresh: true
+            group: common
+          - data-id: redis.yaml
+            refresh: true
+            group: common
+          - data-id: sharding-jdbc.yaml
             refresh: true
             group: common
