--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,13 +2,13 @@ spring:
   application:
     name: dkserver-back
   profiles:
-    active: saic-test
+    active: jac
   cloud:
     nacos:
       config:
-        password: vecent123!@#
+        password: nacos
         username: nacos
-        server-addr: 172.16.13.13:8888  #  配置中心地址
+        server-addr: 192.168.210.27:8848  #  配置中心地址
         file-extension: yaml # 指定配置文件类型
         namespace: ${spring.profiles.active}
         shared-configs:
